[package]
name = "modgrad-transformer"
version = "0.1.0"
edition = "2024"
description = "Native Rust transformer architecture for the modgrad ML SDK"
license = "MIT"

[dependencies]
modgrad-traits = { path = "../modgrad-traits" }
modgrad-compute = { path = "../modgrad-compute" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[features]
# Wrap GptModel as a Service — enabled by the top-level `modgrad` crate,
# which provides `modgrad_io_types`. Empty by design (deps are injected).
__service_integration = []
