[package]
name = "modgrad-transformer"
version = "0.1.0"
edition = "2024"
description = "Native Rust transformer architecture for the modgrad ML SDK"
license = "MIT"

[dependencies]
modgrad-traits = { path = "../modgrad-traits" }
modgrad-compute = { path = "../modgrad-compute" }
modgrad-device = { path = "../modgrad-device" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[features]
# Wrap GptModel as a Service — enabled by the top-level `modgrad` crate,
# which provides `modgrad_io_types`. Empty by design (deps are injected).
__service_integration = []
# Enables the device-resident `AttentionResident` / `SwigluResident` /
# `TransformerBlockResident` / `GptModelResident` wrappers in
# `crate::resident` and the resident KV cache in `crate::kv_cache_resident`.
# Propagates through to compute + device crates so `LinearResident`,
# `GpuVec::Hip`, and the resident MIOpen ops are available.
rocm = ["modgrad-compute/rocm", "modgrad-device/rocm"]

# Tests in this crate share a process-wide HIP serialization mutex with
# other downstream crates (see `modgrad-device::test_lock::hip_test_lock`).
# The `test-utils` feature only flips on for `cargo test`, so production
# builds via the `[dependencies]` modgrad-device entry above are untouched.
[dev-dependencies]
modgrad-device = { path = "../modgrad-device", features = ["test-utils"] }
