[package]
name = "nanochat-rs"
version = "0.2.0"
edition = "2024"
description = "Train a CTM on text using the modgrad SDK — minimal example"
license = "MIT"

[[bin]]
name = "nanochat"
path = "src/main.rs"

[dependencies]
modgrad-runtime = { path = "../modgrad-runtime" }
modgrad-compute = { path = "../modgrad-compute" }
