[package]
name = "bench_brain_crossover"
version = "0.1.0"
edition = "2024"
description = "Find the GPU/CPU crossover for the regional brain. Per-iter wall on host vs forward_cached_resident across two preset sizes."

[[bin]]
name = "bench_brain_crossover"
path = "src/main.rs"

[features]
default = []
rocm = ["modgrad-ctm/rocm", "modgrad-compute/rocm", "modgrad-device/rocm"]

[dependencies]
modgrad-ctm     = { path = "../../crates/modgrad-ctm" }
modgrad-traits  = { path = "../../crates/modgrad-traits" }
modgrad-device  = { path = "../../crates/modgrad-device" }
modgrad-compute = { path = "../../crates/modgrad-compute" }
