[package]
name = "bench_maze_resident"
version = "0.1.0"
edition = "2024"
description = "End-to-end residency bench: real RegionalBrain (eight_region_small) under HipBatch + RegionalResidentCache, sized to keep the SMU pinned long enough for rocm-smi --showuse to register steady state."

[[bin]]
name = "bench_maze_resident"
path = "src/main.rs"

[features]
default = []
rocm = ["modgrad-ctm/rocm", "modgrad-compute/rocm", "modgrad-device/rocm"]

[dependencies]
modgrad-ctm = { path = "../../crates/modgrad-ctm" }
modgrad-compute = { path = "../../crates/modgrad-compute" }
modgrad-device = { path = "../../crates/modgrad-device" }
modgrad-traits = { path = "../../crates/modgrad-traits" }
